--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
+indicatif = "0.17.11"
 reqwest = "0.12.15"
 tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
