--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
+http = "1.3.1"
 indicatif = "0.17.11"
-reqwest = "0.12.15"
+reqwest = { version = "0.12.15", features = ["blocking"] }
+scraper = "0.23.1"
 tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
